--- a/src/scss/utilities/_layout.scss
+++ b/src/scss/utilities/_layout.scss
@@ -197,3 +197,7 @@
 .text-align-right {
   text-align: right !important;
 }
+
+.no-wrap {
+  white-space: nowrap;
+}
